<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OyVer</string>
    <string name="action_refresh">Refresh</string>
    <string name="sessions">Sessions:</string>
    <string name="select_session">Select Session</string>
    <string name="go">Go!</string>
    <string name="yay">:)</string>
    <string name="meh">:|</string>
    <string name="nay">:(</string>
    <string name="no_internet">No internet connection, using offline mode</string>
    <string name="settings_title">Settings</string>
    <string name="default_hostname">http://</string>
    <string name="server_string">Sessions location</string>
    <string name="sounds_string">Enable sounds</string>
    <string name="vibration_string">Enable vibration</string>
    <string name="vote_server_string">Voting location. Leave unset for offline only voting</string>
    <string name="error_downloading_talks">Could not load sessions. Check settings.</string>
    <string name="title_activity_vote_list">Pending Votes</string>
    <string name="title_activity_vote_summary">Pending Vote Summary</string>
    <string name="action_clear_all">Clear all pending votes</string>
    <string name="edit_votes_title">Edit pending votes</string>
    <string name="pending_votes_title">View vote summary</string>
    <string name="are_you_sure_clear">Delete pending vote?</string>
    <string name="are_you_sure_clear_all">Are you sure you want to delete all pending votes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_votes">There are no votes waiting to be sent</string>

</resources>