<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title" >

    <EditTextPreference
        android:defaultValue="@string/default_hostname"
        android:dialogTitle="@string/server_string"
        android:inputType="textNoSuggestions|textUri"
        android:key="server"
        android:title="@string/server_string" />
    <EditTextPreference
        android:defaultValue="@string/default_hostname"
        android:dialogTitle="@string/vote_server_string"
        android:inputType="textNoSuggestions|textUri"
        android:key="voting"
        android:title="@string/vote_server_string" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="sounds"
        android:title="@string/sounds_string" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="vibration"
        android:title="@string/vibration_string" />

</PreferenceScreen>