<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>

    <item
        android:id="@+id/action_list_votes"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/edit_votes_title"/>

    <item
        android:id="@+id/action_view_vote_summary"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/pending_votes_title"/>
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings_title"/>

</menu>